--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@use './app/core/notification/components/notification-toast.component.scss' as *;
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 * {
